--- a/app/views/ReturnTaskListView.scala.html
+++ b/app/views/ReturnTaskListView.scala.html
@@ -14,28 +14,21 @@
  * limitations under the License.
  *@
 
-@import uk.gov.hmrc.govukfrontend.views.html.components.GovukButton
+@import viewmodels.tasklist.TaskListSection
+@import config.FrontendAppConfig
 
 @this(
-    layout: templates.Layout,
-        govukButton: GovukButton
+        layout: templates.Layout,
+        govukButton: GovukButton,
+        taskList: components.TaskListComponent
 )
 
-@()(implicit request: Request[_], messages: Messages)
+@(sections: TaskListSection*)(implicit request: Request[_], messages: Messages, appConfig: FrontendAppConfig)
 
-@layout(
-    pageTitle    = titleNoForm(messages("index.title")),
-    showBackLink = false
-) {
+@layout(pageTitle = titleNoForm(messages("returnTaskList.title"))) {
 
-    <h1 class="govuk-heading-xl">@messages("index.heading")</h1>
+    <h1 class="govuk-heading-xl">@messages("returnTaskList.heading")</h1>
 
-    <p class="govuk-body">@messages("index.guidance")</p>
+ @taskList(sections: _*)
 
-    <p class="govuk-body">
-    @govukButton(
-        ButtonViewModel(messages("site.startAgain"))
-        .asLink(routes.PurchaserSurnameOrCompanyNameController.onPageLoad(mode = NormalMode).url)
-    )
-    </p>
 }
