--- a/app/views/components/TaskListComponent.scala.html
+++ b/app/views/components/TaskListComponent.scala.html
@@ -14,28 +14,22 @@
  * limitations under the License.
  *@
 
-@import uk.gov.hmrc.govukfrontend.views.html.components.GovukButton
+@import config.FrontendAppConfig
+@import viewmodels.tasklist.TaskListSection
 
 @this(
-    layout: templates.Layout,
-        govukButton: GovukButton
+        p: components.p,
+        h2: components.h2,
+        taskListRow: components.TaskListRow
 )
 
-@()(implicit request: Request[_], messages: Messages)
-
-@layout(
-    pageTitle    = titleNoForm(messages("index.title")),
-    showBackLink = false
-) {
-
-    <h1 class="govuk-heading-xl">@messages("index.heading")</h1>
-
-    <p class="govuk-body">@messages("index.guidance")</p>
-
-    <p class="govuk-body">
-    @govukButton(
-        ButtonViewModel(messages("site.startAgain"))
-        .asLink(routes.PurchaserSurnameOrCompanyNameController.onPageLoad(mode = NormalMode).url)
-    )
-    </p>
+@(sections: TaskListSection*)(implicit request: Request[_], messages: Messages, appConfig: FrontendAppConfig)
+<ul class="govuk-task-list">
+@for((section, idx) <- sections.zipWithIndex) {
+    @for(row <- section.rows) {
+        @taskListRow(messages(row.messageKey), row.url, row.tagId, row.status)
+    }
 }
+
+</ul>
+
