--- a/app/views/PurchaserIsIndividualView.scala.html
+++ b/app/views/PurchaserIsIndividualView.scala.html
@@ -14,6 +14,8 @@
  * limitations under the License.
  *@
 
+@import models.prelimQuestions.BusinessOrIndividualRequest
+
 @this(
     layout: templates.Layout,
     formHelper: FormWithCSRF,
@@ -33,11 +35,15 @@
         }
 
         @govukRadios(
-            RadiosViewModel.yesNo(
-                field = form("purchaserIsIndividual"),
-                legend = LegendViewModel(messages("purchaserIsIndividual.heading")).asPageHeading()
-            )
-        )
+            Radios(
+                fieldset = None,
+                name = form("value").name,
+                items = BusinessOrIndividualRequest.options map (item => item.copy(checked = form("value").value.isDefined && form("value").value == item.value)),
+                errorMessage = if(form("value").hasErrors) Some(ErrorMessage(
+                    content = Text(messages(form("value").error.get.message, form("value").error.get.args: _*)),
+                    visuallyHiddenText = Some(messages("error.prefix"))
+                )) else None
+            ))
 
         @govukButton(
             ButtonViewModel(messages("site.continue"))
