--- a/app/views/PurchaserSurnameOrCompanyNameView.scala.html
+++ b/app/views/PurchaserSurnameOrCompanyNameView.scala.html
@@ -17,33 +17,44 @@
 @import viewmodels.InputWidth._
 
 @this(
-    layout: templates.Layout,
-    formHelper: FormWithCSRF,
-    govukErrorSummary: GovukErrorSummary,
-    govukInput: GovukInput,
-    govukButton: GovukButton
+        layout: templates.Layout,
+        formHelper: FormWithCSRF,
+        govukErrorSummary: GovukErrorSummary,
+        govukInput: GovukInput,
+        govukButton: GovukButton,
+        p: components.p
 )
+@(form: Form[_], mode: Mode, businessOrIndividual: String)(implicit request: Request[_], messages: Messages)
 
-@(form: Form[_], mode: Mode)(implicit request: Request[_], messages: Messages)
+@defining(if(businessOrIndividual == "Business") "purchaser.business" else "purchaser.individual") { key =>
 
-@layout(pageTitle = title(form, messages("purchaserSurnameOrCompanyName.title"))) {
+    @layout(pageTitle = title(form, (key + ".title"))) {
 
-    @formHelper(action = routes.PurchaserSurnameOrCompanyNameController.onSubmit(mode)) {
+        @formHelper(action = routes.PurchaserSurnameOrCompanyNameController.onSubmit(mode)) {
 
-        @if(form.errors.nonEmpty) {
-            @govukErrorSummary(ErrorSummaryViewModel(form))
-        }
+            @if(form.errors.nonEmpty) {
+                @govukErrorSummary(ErrorSummaryViewModel(form))
+            }
 
-        @govukInput(
-            InputViewModel(
-                field = form("purchaserSurnameOrCompanyName"),
-                label = LabelViewModel(messages("purchaserSurnameOrCompanyName.heading")).asPageHeading()
+            @govukInput(
+                InputViewModel(
+                    field = form("purchaserSurnameOrCompanyName"),
+                    label = LabelViewModel(messages( (key + ".checkYourAnswersLabel"))).asPageHeading()
+                )
+                .withWidth(Full)
+                .withHint(
+                    HintViewModel(
+                        HtmlContent(
+                        Html(messages(key + ".p"))
+                    )
+                    )
+                )
             )
-            .withWidth(Full)
-        )
 
-        @govukButton(
-            ButtonViewModel(messages("site.continue"))
-        )
+
+            @govukButton(
+                ButtonViewModel(messages("site.save.continue"))
+            )
+        }
     }
 }
