--- a/app/views/TransactionTypeView.scala.html
+++ b/app/views/TransactionTypeView.scala.html
@@ -41,7 +41,7 @@
         )
 
         @govukButton(
-            ButtonViewModel(messages("site.saveAndContinue"))
+            ButtonViewModel(messages("site.save.continue"))
         )
     }
 }
