--- a/app/views/PurchaserIsIndividualView.scala.html
+++ b/app/views/PurchaserIsIndividualView.scala.html
@@ -15,18 +15,21 @@
  *@
 
 @import models.prelimQuestions.BusinessOrIndividualRequest
-
+@import views.html.components.h1
 @this(
     layout: templates.Layout,
     formHelper: FormWithCSRF,
     govukErrorSummary: GovukErrorSummary,
     govukRadios: GovukRadios,
-    govukButton: GovukButton
+    govukButton: GovukButton,
+    h1: h1
 )
 
 @(form: Form[_], mode: Mode)(implicit request: Request[_], messages: Messages)
 
 @layout(pageTitle = title(form, messages("purchaserIsIndividual.title"))) {
+
+    @h1(messages("purchaserIsIndividual.heading"))
 
     @formHelper(action = routes.PurchaserIsIndividualController.onSubmit(mode), Symbol("autoComplete") -> "off") {
 
