DTR-FullReturn - added functionality to the home screen to capture a full return and test

--- a/app/views/components/TaskListComponent.scala.html
+++ b/app/views/components/TaskListComponent.scala.html
@@ -27,7 +27,7 @@
 <ul class="govuk-task-list">
 @for((section, idx) <- sections.zipWithIndex) {
     @for(row <- section.rows) {
-        @taskListRow(messages(row.messageKey), row.url, row.tagId, row.status)
+        @taskListRow(messages(row.messageKey), row.url, row.tagId, row.status, row.canEdit)
     }
 }
 
