--- a/app/views/purchaser/AddPurchaserPhoneNumberView.scala.html
+++ b/app/views/purchaser/AddPurchaserPhoneNumberView.scala.html
@@ -15,34 +15,44 @@
  *@
 
 @this(
-    layout: templates.Layout,
-    formHelper: FormWithCSRF,
-    govukErrorSummary: GovukErrorSummary,
-    govukRadios: GovukRadios,
-    govukButton: GovukButton
+        layout: templates.Layout,
+        formHelper: FormWithCSRF,
+        govukErrorSummary: GovukErrorSummary,
+        govukRadios: GovukRadios,
+        govukButton: GovukButton
 )
 
-@import models.purchaser.AddPurchaserPhoneNumber
 @(form: Form[_], mode: Mode)(implicit request: Request[_], messages: Messages)
 
 @layout(pageTitle = title(form, messages("addPurchaserPhoneNumber.title"))) {
 
-    @formHelper(action = routes.AddPurchaserPhoneNumberController.onSubmit(mode), Symbol("autoComplete") -> "off") {
+    @formHelper(action = controllers.purchaser.routes.AddPurchaserPhoneNumberController.onSubmit(mode), Symbol("autoComplete") -> "off") {
 
         @if(form.errors.nonEmpty) {
-            @govukErrorSummary(ErrorSummaryViewModel(form,  errorLinkOverrides = Map("value" -> "value_0")))
+            @govukErrorSummary(ErrorSummaryViewModel(form, errorLinkOverrides = Map("value" -> "value_0")))
         }
+
+        <span class="govuk-caption-l">@messages("purchaser.caption")</span>
 
         @govukRadios(
             RadiosViewModel(
-                field  = form("value"),
+                field = form("value"),
                 legend = LegendViewModel(messages("addPurchaserPhoneNumber.heading")).asPageHeading(),
-                items  = AddPurchaserPhoneNumber.options
+                items = Seq(
+                    RadioItem(
+                        value = Some("true"),
+                        content = Text(messages("site.yes"))
+                    ),
+                    RadioItem(
+                        value = Some("false"),
+                        content = Text(messages("site.no"))
+                    )
+                )).withHint(HintViewModel(HtmlContent(Html(messages("addPurchaserPhoneNumber.hint", "Purchaser"))))
             )
         )
 
         @govukButton(
-            ButtonViewModel(messages("site.continue"))
+            ButtonViewModel(messages("site.save.continue"))
         )
     }
 }
