--- a/app/views/purchaser/AddPurchaserPhoneNumberView.scala.html
+++ b/app/views/purchaser/AddPurchaserPhoneNumberView.scala.html
@@ -22,7 +22,7 @@
         govukButton: GovukButton
 )
 
-@(form: Form[_], mode: Mode, purchaserName: Option[String])(implicit request: Request[_], messages: Messages)
+@(form: Form[_], mode: Mode, purchaserName: String)(implicit request: Request[_], messages: Messages)
 
 @layout(pageTitle = title(form, messages("addPurchaserPhoneNumber.title"))) {
 
@@ -47,8 +47,8 @@
                         value = Some("false"),
                         content = Text(messages("site.no"))
                     )
-                )).withHint(HintViewModel(HtmlContent(Html(messages("addPurchaserPhoneNumber.hint", purchaserName))))
-            )
+                )
+            ).withHint(HintViewModel(HtmlContent(Html(messages("addPurchaserPhoneNumber.hint", purchaserName)))))
         )
 
         @govukButton(
